@startuml

title __USERINFO's Class Diagram__\n

  package  {
    package JavaFinalFx {
      package JavaFinalFx.userInfo {
        class FXMLUserController {
            - textId : TextField
            - textFirst : TextField
            - textLast : TextField
            - textAge : TextField
            - textHobby : TextField
            - textJob : TextField
            - textSalary : TextField
            - label : Label
            - tableUser : TableView<UserDetails>
            - columnId : TableColumn<UserDetails, Integer>
            - columnFirst : TableColumn<UserDetails, String>
            - columnLast : TableColumn<UserDetails, String>
            - columnAge : TableColumn<UserDetails, Integer>
            - columnHobby : TableColumn<UserDetails, String>
            - columnJob : TableColumn<UserDetails, String>
            - columnSalary : TableColumn<UserDetails, Integer>
            - btnLoad : Button
            - btnSave : Button
            - btnDelete : Button
            - btnUpdate : Button
            - btnAge : Button
            - btnSalary : Button
            + combo : ComboBox
            - barChart : BarChart<String, Integer>
            - data : ObservableList<UserDetails>
            ~ conn : Connection
            ~ stmt : Statement
            ~ event : ActionEvent
            + getCombo()
            + initialize()
            - loadDataFromDatabase()
            + saveDataFromDatabase()
            + updateDataFromDatabase()
            + deleteDataFromDatabase()
            + gotoSalaryGragh()
        }
      }
    }
  }
  

  package  {
    package JavaFinalFx {
      package JavaFinalFx.userInfo {
        class UserDetails {
            - id : IntegerProperty
            - first : StringProperty
            - last : StringProperty
            - age : IntegerProperty
            - hobby : StringProperty
            - job : StringProperty
            - salary : IntegerProperty
            + UserDetails()
            + setHobby()
            + setJob()
            + setSalary()
            + getHobby()
            + hobbyProperty()
            + getJob()
            + jobProperty()
            + getSalary()
            + salaryProperty()
            + getId()
            + idProperty()
            + getFirst()
            + firstProperty()
            + getLast()
            + lastProperty()
            + getAge()
            + ageProperty()
            + setId()
            + setFirst()
            + setLast()
            + setAge()
            + toString()
        }
      }
    }
  }
  

  FXMLUserController -up-|> Initializable
  FXMLUserController o-- DbConnection : dc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
